deploy/020-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: device-simulator
  labels:
    app.kubernetes.io/name: drogue-device-simulator
    app.kubernetes.io/instance: simulator
    app.kubernetes.io/component: frontend
spec:
  selector:
    app.kubernetes.io/name: drogue-device-simulator
    app.kubernetes.io/instance: simulator
  ports:
    - port: 8080
      name: web
      targetPort: web
