deploy/030-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: console
spec:
  port:
    targetPort: web
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: device-simulator
